showcase and description of about page done

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,5 @@
 @import "./pages/global";
 @import "./pages/home";
+@import "./pages/about";
 @import "./components/button";
 @import "./components/input";
