--- a/src/sass/pages/_about.scss
+++ b/src/sass/pages/_about.scss
@@ -34,43 +34,74 @@
 }
 .about-main {
     position: relative;
-    .paint-stroke {
-        top: -25px;
-        z-index: 1;
-    }
-    .section-wrap {
-        position: relative;
-        z-index: 2;
-        padding-top: 0;
-        .description {
-            @include media-query-mobile(1024px) {
-                padding-right: 20px;
-            }
-            p {
-                padding-bottom: 20px;
+    .about-info {
+        .paint-stroke {
+            top: -25px;
+            z-index: 1;
+        }
+        .section-wrap {
+            position: relative;
+            z-index: 2;
+            padding-top: 0;
+            .description {
                 @include media-query-mobile(1024px) {
-                    padding-bottom: 30px;
+                    padding-right: 20px;
+                }
+                p {
+                    padding-bottom: 20px;
+                    @include media-query-mobile(1024px) {
+                        padding-bottom: 30px;
+                    }
+                }
+                button {
+                    width: 170px;
                 }
             }
-            button {
-                width: 170px;
-            }
-        }
-        .about-img {
-            width: 100%;
-            padding: 20px 0;
-            @include media-query-mobile(1024px) {
-                padding-left: 20px;
-            }
-            img {
+            .about-img {
                 width: 100%;
-                height: 100%;
-                object-fit: cover;
+                padding: 20px 0;
+                @include media-query-mobile(1024px) {
+                    padding-left: 20px;
+                }
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+            .description, .about-img {
+                @include media-query-mobile(1024px) {
+                    width: 50%;
+                }
             }
         }
-        .description, .about-img {
-            @include media-query-mobile(1024px) {
-                width: 50%;
+    }
+    .services {
+        background: $dark url("../../../dist/images/back.png") center top;
+        position: relative;
+        .paint-stroke {
+            top: -100px;
+            z-index: 0;
+        }
+        .section-wrap {
+            position: relative;
+            z-index: 3;
+            .service-item {
+                span {
+                    i {
+                        color: $secondary;
+                        font-size: 3.75rem;
+                    }
+                }
+                text-align: center;
+                h1 {
+                    color: $white;
+                    font-family: $title;
+                }
+                p {
+                    color: $semi;
+                    font-family: $text;
+                }
             }
         }
     }
