getting started on menu page

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,6 @@
 @import "./pages/global";
 @import "./pages/home";
 @import "./pages/about";
+@import "./pages/menu";
 @import "./components/button";
 @import "./components/input";
