--- a/src/sass/pages/_menu.scss
+++ b/src/sass/pages/_menu.scss
@@ -15,69 +15,75 @@
             flex-direction: column;
             @include media-query-mobile(1200px) {
                 flex-direction: row;
-            } 
-            .menu-item {
-                display: flex;
+            }
+            .entree-left, .entree-right {
                 @include media-query-mobile(1200px) {
                     width: 50%;
                 }
-                .menu-img {
-                    width: 30%;
-                    @include media-query-mobile(500px) {
-                        width: 135px;
-                    }
-                    img {
-                        width: 100%;
-                    }
-                }
-                .menu-description {
-                    width: 70%;
-                    .section-wrap {
-                        justify-content: flex-start;
-                        padding-top: 0;
-                        position: relative;
-                        @include media-query-mobile(1024px) {
-                            flex-direction: row !important;
+                .menu-item {
+                    display: flex;
+                    margin-top: 3.5rem;
+                    .menu-img {
+                        width: 30%;
+                        @include media-query-mobile(500px) {
+                            width: 135px;
                         }
-                        h3 {
-                            font-family: $title;
-                            letter-spacing: 1px;
-                        }
-                        .name {
-                            font-size: 22px;
-                            color: $dark;
-                            margin-bottom: 0.25rem;
-                        }
-                        span {
-                            height: 1px;
-                            border-bottom: 1px dashed $semi;
+                        img {
                             width: 100%;
-                            margin-bottom: 1rem;
-                            @include media-query-mobile(1024px) {
-                                position: relative;
-                                top: 15px;
-                                margin: 0 30px; 
-                            }
-                            @include media-query-mobile(1200px) {
-                                position: relative;
-                                top: 15px;
-                                margin: 0 30px; 
-                                width: 180px;
-                            }
-                        }
-                        .price {
-                            font-size: 20px;
-                            color: $primary;
                         }
                     }
-                    p {
-                        font-family: $text;
-                        color: $semi;
-                        font-size: 14px;
-                        line-height: 1.8;
+                    .menu-description {
+                        width: 70%;
+                        .section-wrap {
+                            justify-content: flex-start;
+                            padding-top: 0;
+                            position: relative;
+                            @include media-query-mobile(1024px) {
+                                flex-direction: row !important;
+                            }
+                            h3 {
+                                font-family: $title;
+                                letter-spacing: 1px;
+                            }
+                            .name {
+                                font-size: 22px;
+                                color: $dark;
+                                margin-bottom: 0.25rem;
+                            }
+                            span {
+                                height: 1px;
+                                border-bottom: 1px dashed $semi;
+                                width: 100%;
+                                margin-bottom: 1rem;
+                                @include media-query-mobile(1024px) {
+                                    position: relative;
+                                    top: 15px;
+                                    margin: 0 30px; 
+                                }
+                                @include media-query-mobile(1200px) {
+                                    position: relative;
+                                    top: 15px;
+                                    margin: 0 30px; 
+                                    width: 180px;
+                                }
+                            }
+                            .price {
+                                font-size: 20px;
+                                color: $primary;
+                            }
+                        }
+                        p {
+                            font-family: $text;
+                            color: $semi;
+                            font-size: 14px;
+                            line-height: 1.8;
+                        }
                     }
                 }
-            }
+            } 
         }
+    }
+    .section-break {
+        background: url("../../../dist/images/black-2.png");
     }
 }
