markup for contact page

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,5 +2,6 @@
 @import "./pages/home";
 @import "./pages/about";
 @import "./pages/menu";
+@import "./pages/contact";
 @import "./components/button";
 @import "./components/input";
