--- a/src/sass/pages/_contact.scss
+++ b/src/sass/pages/_contact.scss
@@ -1,5 +1,5 @@
 .contact-showcase {
-    background: url("../../../dist/images/contact.png");
+    background: url("../dist/images/contact.png");
 }
 .contact-main {
     .section-wrap {
